# sales

./: Cargo.toml  README.md  deny.toml  go.mod  main.go
src/: groups.rs  lib.rs  main.rs  report.rs  usd.rs
testdata/: groups  groups.bad  gumroad.csv  orders.csv  sales.csv  squarespace.csv
